docs/src/content/v2.0.2/en-us/insert.md
# Insert

Dinoco uses the generated entity itself as insert input — there's no separate `#[insertable]` derive, no parallel "create struct," and no `.with_relation(...)` call to learn. Defaults, generated IDs, and relation metadata are already baked into the entity you already have.

## Create an entity

Use the generated `new()` constructor, then adjust any public field you need to before inserting:

```rust
let mut user = User::new(
    "ana@example.com".to_string(),
    "Ana".to_string(),
);

user.bio = Some("Rust developer".to_string());
```

`new()` only asks for required scalar values that have no default and no generator — see [Models and fields](/en-us/docs/orm/guide/models#the-generated-new-function) for exactly how that parameter list is chosen. This keeps construction short without ever hiding which values the caller is actually responsible for supplying.

## Insert one entity

```rust
use dinoco::insert_into;

insert_into::<User>()
    .values(&user)
    .execute(&client)
    .await?;
```

Passing `&user` borrows it — the insert doesn't drop or move your value, so you can keep using `user` afterwards. An owned entity works too, if you don't need it again.

## Insert many entities

```rust
use dinoco::insert_many;

let users = vec![
    User::new("ana@example.com".to_string(), "Ana".to_string()),
    User::new("leo@example.com".to_string(), "Leo".to_string()),
];

insert_many::<User>()
    .values(&users)
    .execute(&client)
    .await?;
```

Under the hood, this groups every row into the active adapter's native multi-row insert statement — it's a genuine batch operation, not a loop issuing one `insert_into` per item.

## Insert relations

Put nested entities directly into the generated relation field. The same pattern works for a `Vec` (to-many) relation and for the to-one `Option` relation:

```rust
let mut user = User::new(
    "ana@example.com".to_string(),
    "Ana".to_string(),
);
user.tokens = vec![UserToken::new(), UserToken::new()];

insert_into::<User>()
    .values(&user)
    .execute(&client)
    .await?;
```

For an optional to-one relation:

```rust
user.profile = Some(Profile::new());
```

Dinoco inserts nested one-to-many, many-to-one, and one-to-one data using the relation's own metadata, and propagates whichever generated key the child side needs — there's nothing extra to configure beyond populating the field.

### Connect an implicit many-to-many during insert

For an implicit many-to-many, each endpoint carries a virtual `Option<Id>` field pointing at the opposite model. Set it before calling `insert_into`, and the endpoint gets inserted *and* its pivot link created, in the same builder execution:

```rust
let mut tag = Tag::new("documentation".to_string());
tag.task_id = Some(task.id.clone());

dinoco::insert_into::<Tag>()
    .values(&tag)
    .execute(&client)
    .await?;
```

The same rule applies independently to every item in an `insert_many` batch:

```rust
let mut tags = vec![
    Tag::new("rust".to_string()),
    Tag::new("database".to_string()),
];

for tag in &mut tags {
    tag.task_id = Some(task.id.clone());
}

dinoco::insert_many::<Tag>()
    .values(&tags)
    .execute(&client)
    .await?;
```

Dinoco excludes `task_id` from `tag`'s real SQL columns entirely. After each `Tag` row is inserted, it uses that virtual value to insert `(task.id, tag.id)` into the pivot table separately. Leaving it `None` inserts the endpoint with no link at all — you can always connect it later. The alternative, when both endpoints already exist, is to insert neither with the virtual field set and instead call `connect` from the update API.

> [!NOTE]
> The virtual ID is write-only, full stop — it comes back `None` on every read and every returning insert, including `.returning::<S>()`. Don't write code that expects to inspect it after the fact to check whether a link exists; query the relation itself instead.

The same payloads work inside a transaction context too, making the endpoint insert and its pivot link commit or roll back as one unit:

```rust
dinoco::transaction(&client, |tx| async move {
    dinoco::insert_into::<Tag>().value(&tag).execute(tx).await?;
    dinoco::insert_many::<Tag>().values(&tags).execute(tx).await?;
    Ok(())
})
.await?;
```

See [Implicit many-to-many](/en-us/docs/orm/guide/relations#implicit-many-to-many) for the full picture: generated fields, pivot behavior, loading in both directions, counts, `connect`/`disconnect`, and migration notes.

## Generated identifiers

UUID and Snowflake values are generated by Dinoco itself, client-side, before any dependent relation rows are even built — which is exactly what makes it possible to insert a parent and its nested children in one call, since the child rows can reference the parent's key before the parent has touched the database. Auto-increment keys work the other way around: they're retrieved *from* the database after the insert, since the database is what generates them.

## Returning a projection

Without `.returning(...)`, an insert's successful result is just `()` — there's nothing to hand back if you didn't ask for anything. Add an entity type or an `EntityExtend` projection when the caller actually needs the inserted data:

```rust
let inserted = insert_into::<User>()
    .values(&user)
    .returning::<UserSummary>()
    .execute(&client)
    .await?;

let inserted_many = insert_many::<User>()
    .values(&users)
    .returning::<User>()
    .execute(&client)
    .await?;
```

The first call returns one `UserSummary`; the second returns `Vec<User>`. Only ask for returning data when you'll actually use it — a nested insert may need an extra reload internally to assemble the exact projection you requested.

## Pluck a single column back

`.pluck(...)` is a lighter alternative to `.returning::<S>()` when only one column is needed:

```rust
let id = insert_into::<User>()
    .values(&user)
    .pluck(|x| x.id)
    .execute(&client)
    .await?; // i64

let ids = insert_many::<User>()
    .values(&users)
    .pluck(|x| x.id)
    .execute(&client)
    .await?; // Vec<i64>
```

`insert_into` returns the plucked value directly; `insert_many` returns one per inserted row, in the same shape `.returning::<S>()` would. It replaces `.returning::<S>()` rather than combining with it.

## Transform the returned rows

Chain `.transform(...)` after `.returning::<S>()` to map the inserted row(s) on the Rust side, after the insert has already run:

```rust
let name = insert_into::<User>()
    .values(&user)
    .returning::<User>()
    .transform(|user| user.name)
    .execute(&client)
    .await?; // String

let names = insert_many::<User>()
    .values(&users)
    .returning::<User>()
    .transform(|user| user.name)
    .execute(&client)
    .await?; // Vec<String>
```
